Changed name and include specific package files

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fury-sdk"
+name = "fury_sdk"
 version = "0.1.0"
 edition = "2021"
 description = "A Rust client library for interacting with the FURY API service - a comprehensive toolkit for Solana token operations."
@@ -8,6 +8,7 @@ repository = "https://github.com/furydotbot/rust-sdk"
 readme = "README.md"
 keywords = ["sdk", "fury", "api"]
 categories = ["api-bindings", "development-tools"]
+include = ["src/**", "Cargo.toml", "README.md", "LICENSE*"]
 
 [dependencies]
 anyhow = "1.0.98"
